Revert requirements.txt to yesterday

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 absl-py==1.0.0
 biopython==1.79
-chex==0.1.5
+chex==0.0.7
 dm-haiku==0.0.9
 dm-tree==0.1.6
 docker==5.0.0
 immutabledict==2.0.0
-jax==0.3.22
-jaxlib==0.3.22
+jax==0.3.25
+jax==0.3.5
 ml-collections==0.1.0
 numpy==1.21.6
 pandas==1.3.4
-scipy==1.7.3
+scipy==1.7.0
 tensorflow-cpu==2.11.0
 alpa
+jaxlib==0.3.22+cuda111.cudnn805
